crates/swc-optimizer/core/src/snapshots/qwik_core__test__should_convert_jsx_events.snap
---
source: src/test.rs
expression: output
---
==INPUT==
import { component$ } from "@qwik.dev/core";

const ManyEventsComponent = component$(() => {
  return (
    <div>
      <button onClick$={() => {}} onDblClick$={() => {}}>
        click
      </button>
      <button
        onClick$={() => {}}
        onBlur$={() => {}}
        on-anotherCustom$={() => {}}
        document:onFocus$={() => {}}
        window:onClick$={() => {}}
      >
        click
      </button>
    </div>
  );
});

============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_ManyEventsComponent_component_XXXXXXXXXXXX");
/*#__PURE__*/ componentQrl(
  /*#__PURE__*/ qrl(i_XXXXXXXXXXXX, "ManyEventsComponent_component_XXXXXXXXXXXX"),
);

Some('{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";;;cAE4B"}');
============================= test.tsx_ManyEventsComponent_component_XXXXXXXXXXXX.js (ENTRY POINT)==
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () =>
  import("./test.tsx_ManyEventsComponent_component_div_button_q_e_click_1_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () =>
  import("./test.tsx_ManyEventsComponent_component_div_button_q_w_click_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () =>
  import("./test.tsx_ManyEventsComponent_component_div_button_q_e_blur_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () =>
  import("./test.tsx_ManyEventsComponent_component_div_button_q_e_dblclick_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () =>
  import("./test.tsx_ManyEventsComponent_component_div_button_q_e_another_custom_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () =>
  import("./test.tsx_ManyEventsComponent_component_div_button_q_d_focus_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () =>
  import("./test.tsx_ManyEventsComponent_component_div_button_q_e_click_XXXXXXXXXXXX");
export const ManyEventsComponent_component_XXXXXXXXXXXX = () => {
  return /*#__PURE__*/ _jsxSorted(
    "div",
    null,
    null,
    [
      /*#__PURE__*/ _jsxSorted(
        "button",
        null,
        {
          "q-e:click": /*#__PURE__*/ qrl(
            i_XXXXXXXXXXXX,
            "ManyEventsComponent_component_div_button_q_e_click_XXXXXXXXXXXX",
          ),
          "q-e:dblclick": /*#__PURE__*/ qrl(
            i_XXXXXXXXXXXX,
            "ManyEventsComponent_component_div_button_q_e_dblclick_XXXXXXXXXXXX",
          ),
        },
        "click",
        3,
        null,
      ),
      /*#__PURE__*/ _jsxSorted(
        "button",
        null,
        {
          "q-e:click": /*#__PURE__*/ qrl(
            i_XXXXXXXXXXXX,
            "ManyEventsComponent_component_div_button_q_e_click_1_XXXXXXXXXXXX",
          ),
          "q-e:blur": /*#__PURE__*/ qrl(
            i_XXXXXXXXXXXX,
            "ManyEventsComponent_component_div_button_q_e_blur_XXXXXXXXXXXX",
          ),
          "q-e:another-custom": /*#__PURE__*/ qrl(
            i_XXXXXXXXXXXX,
            "ManyEventsComponent_component_div_button_q_e_another_custom_XXXXXXXXXXXX",
          ),
          "q-d:focus": /*#__PURE__*/ qrl(
            i_XXXXXXXXXXXX,
            "ManyEventsComponent_component_div_button_q_d_focus_XXXXXXXXXXXX",
          ),
          "q-w:click": /*#__PURE__*/ qrl(
            i_XXXXXXXXXXXX,
            "ManyEventsComponent_component_div_button_q_w_click_XXXXXXXXXXXX",
          ),
        },
        "click",
        3,
        null,
      ),
    ],
    3,
    "u6_0",
  );
};

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";;;;;;;;;yDAEuC;IACrC,qBACE,WAAC;sBACC,WAAC;YAAO,WAAQ;YAAY,cAAW;WAAY;sBAGnD,WAAC;YACC,WAAQ;YACR,UAAO;YACP,oBAAiB;YAHnB,WAQS;YART,WAQS;WAFR;;AAKP"}',
);
/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    86,
    436
  ]
}
*/
============================= test.tsx_ManyEventsComponent_component_div_button_q_e_click_XXXXXXXXXXXX.js (ENTRY POINT)==
export const ManyEventsComponent_component_div_button_q_e_click_XXXXXXXXXXXX = () => {};

Some('{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":"8EAKwB,KAAO"}');
/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_div_button_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component_div_button_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_div_button_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "ManyEventsComponent_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    139,
    147
  ]
}
*/
============================= test.tsx_ManyEventsComponent_component_div_button_q_e_dblclick_XXXXXXXXXXXX.js (ENTRY POINT)==
export const ManyEventsComponent_component_div_button_q_e_dblclick_XXXXXXXXXXXX = () => {};

Some('{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":"iFAK+C,KAAO"}');
/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_div_button_q_e_dblclick_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component_div_button_q_e_dblclick",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_div_button_q_e_dblclick_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "ManyEventsComponent_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onDblClick$",
  "captures": false,
  "loc": [
    162,
    170
  ]
}
*/
============================= test.tsx_ManyEventsComponent_component_div_button_q_e_click_1_XXXXXXXXXXXX.js (ENTRY POINT)==
export const ManyEventsComponent_component_div_button_q_e_click_1_XXXXXXXXXXXX = () => {};

Some('{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":"gFASkB,KAAO"}');
/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_div_button_q_e_click_1_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component_div_button_q_e_click_1",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_div_button_q_e_click_1_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "ManyEventsComponent_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    235,
    243
  ]
}
*/
============================= test.tsx_ManyEventsComponent_component_div_button_q_e_blur_XXXXXXXXXXXX.js (ENTRY POINT)==
export const ManyEventsComponent_component_div_button_q_e_blur_XXXXXXXXXXXX = () => {};

Some('{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":"6EAUiB,KAAO"}');
/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_div_button_q_e_blur_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component_div_button_q_e_blur",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_div_button_q_e_blur_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "ManyEventsComponent_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onBlur$",
  "captures": false,
  "loc": [
    262,
    270
  ]
}
*/
============================= test.tsx_ManyEventsComponent_component_div_button_q_e_another_custom_XXXXXXXXXXXX.js (ENTRY POINT)==
export const ManyEventsComponent_component_div_button_q_e_another_custom_XXXXXXXXXXXX = () => {};

Some('{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":"uFAW2B,KAAO"}');
/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_div_button_q_e_another_custom_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component_div_button_q_e_another_custom",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_div_button_q_e_another_custom_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "ManyEventsComponent_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "on-anotherCustom$",
  "captures": false,
  "loc": [
    299,
    307
  ]
}
*/
============================= test.tsx_ManyEventsComponent_component_div_button_q_d_focus_XXXXXXXXXXXX.js (ENTRY POINT)==
export const ManyEventsComponent_component_div_button_q_d_focus_XXXXXXXXXXXX = () => {};

Some('{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":"8EAY2B,KAAO"}');
/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_div_button_q_d_focus_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component_div_button_q_d_focus",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_div_button_q_d_focus_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "ManyEventsComponent_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "document:onFocus$",
  "captures": false,
  "loc": [
    336,
    344
  ]
}
*/
============================= test.tsx_ManyEventsComponent_component_div_button_q_w_click_XXXXXXXXXXXX.js (ENTRY POINT)==
export const ManyEventsComponent_component_div_button_q_w_click_XXXXXXXXXXXX = () => {};

Some('{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":"8EAayB,KAAO"}');
/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_div_button_q_w_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component_div_button_q_w_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_div_button_q_w_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "ManyEventsComponent_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "window:onClick$",
  "captures": false,
  "loc": [
    371,
    379
  ]
}
*/
== DIAGNOSTICS ==

[]
