crates/swc-optimizer/core/src/snapshots/qwik_core__test__should_extract_single_qrl.snap
---
source: src/test.rs
expression: output
---
==INPUT==

import { $, component$, useSignal, Signal } from "@qwik.dev/core";
export const App = component$(() => {
  const data = useSignal<Signal<any>[]>([]);
  const selectedItem = useSignal<any | null>(null);
  return (
    <div>
      {data.value.map((row) => (
        <tr key={untrack(() => row.value.id)} class={row.value.selected.value ? "danger" : ""}>
          <td class="col-md-1">{row.value.id}</td>
          <td class="col-md-4">
            <a
              onClick$={() => {
                if (selectedItem.value) {
                  selectedItem.value.selected.value = false;
                }
                selectedItem.value = row.value;
                row.value.selected.value = true;
              }}
            >
              {row.value.label.value}
            </a>
          </td>
          <td class="col-md-1">
            <a
              onClick$={() => {
                const dataValue = untrack(() => data.value);
                data.value = dataValue.toSpliced(
                  dataValue.findIndex((d) => d.value.id === row.value.id),
                  1,
                );
              }}
            >
              <span aria-hidden="true">x</span>
            </a>
          </td>
          <td class="col-md-6" />
        </tr>
      ))}
    </div>
  );
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_ckEPmXZlub0 = ()=>import("./test.tsx_App_component_ckEPmXZlub0");
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ckEPmXZlub0, "App_component_ckEPmXZlub0"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;AACA,OAAO,MAAM,oBAAM,4EAuChB\"}")
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { _fnSignal } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
const _hf0 = (p0)=>p0.value.selected.value ? "danger" : "";
const _hf0_str = 'p0.value.selected.value?"danger":""';
const _hf1 = (p0)=>p0.value.id;
const _hf1_str = "p0.value.id";
const _hf2 = (p0)=>p0.value.label.value;
const _hf2_str = "p0.value.label.value";
const i_40fnSAlYI48 = ()=>import("./test.tsx_App_component_div_tr_td_a_q_e_click_1_40fnSAlYI48");
const i_lgbZkJXyLtg = ()=>import("./test.tsx_App_component_div_tr_td_a_q_e_click_lgbZkJXyLtg");
export const App_component_ckEPmXZlub0 = ()=>{
    const data = useSignal([]);
    const selectedItem = useSignal(null);
    const App_component_div_tr_td_a_q_e_click_lgbZkJXyLtg = /*#__PURE__*/ qrl(i_lgbZkJXyLtg, "App_component_div_tr_td_a_q_e_click_lgbZkJXyLtg", [
        selectedItem
    ]);
    const App_component_div_tr_td_a_q_e_click_1_40fnSAlYI48 = /*#__PURE__*/ qrl(i_40fnSAlYI48, "App_component_div_tr_td_a_q_e_click_1_40fnSAlYI48", [
        data
    ]);
    return /*#__PURE__*/ _jsxSorted("div", null, null, data.value.map((row)=>/*#__PURE__*/ _jsxSorted("tr", {
            class: _fnSignal(_hf0, [
                row
            ], _hf0_str)
        }, null, [
            /*#__PURE__*/ _jsxSorted("td", null, {
                class: "col-md-1"
            }, _fnSignal(_hf1, [
                row
            ], _hf1_str), 1, null),
            /*#__PURE__*/ _jsxSorted("td", null, {
                class: "col-md-4"
            }, /*#__PURE__*/ _jsxSorted("a", {
                "q-e:click": App_component_div_tr_td_a_q_e_click_lgbZkJXyLtg,
                "q:p": row
            }, null, _fnSignal(_hf2, [
                row
            ], _hf2_str), 0, null), 1, null),
            /*#__PURE__*/ _jsxSorted("td", null, {
                class: "col-md-1"
            }, /*#__PURE__*/ _jsxSorted("a", {
                "q-e:click": App_component_div_tr_td_a_q_e_click_1_40fnSAlYI48,
                "q:p": row
            }, null, /*#__PURE__*/ _jsxSorted("span", null, {
                "aria-hidden": "true"
            }, "x", 3, null), 2, null), 1, null),
            /*#__PURE__*/ _jsxSorted("td", null, {
                class: "col-md-6"
            }, null, 3, null)
        ], 1, untrack(()=>row.value.id))), 1, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;mBAOqD,GAAI,KAAK,CAAC,QAAQ,CAAC,KAAK,GAAG,WAAW;;mBAC3D,GAAI,KAAK,CAAC,EAAE;;mBAW7B,GAAI,KAAK,CAAC,KAAK,CAAC,KAAK;;;;yCAlBN;IAC5B,MAAM,OAAO,UAAyB,EAAE;IACxC,MAAM,eAAe,UAAsB;;;;;;;IAC3C,qBACE,WAAC,mBACE,KAAK,KAAK,CAAC,GAAG,CAAC,CAAC,oBACf,WAAC;YAAqC,KAAK;;;;0BACzC,WAAC;gBAAG,OAAM;;;;0BACV,WAAC;gBAAG,OAAM;6BACR,WAAC;gBACC,WAAQ;uBALC;;;;0BAgBb,WAAC;gBAAG,OAAM;6BACR,WAAC;gBACC,WAAQ;uBAlBC;mCA0BT,WAAC;gBAAK,eAAY;eAAO;0BAG7B,WAAC;gBAAG,OAAM;;cA5BH,QAAQ,IAAM,IAAI,KAAK,CAAC,EAAE;AAiC3C\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    98,
    1295
  ]
}
*/
============================= test.tsx_App_component_div_tr_td_a_q_e_click_lgbZkJXyLtg.js (ENTRY POINT)==

import { _captures } from "@qwik.dev/core";
export const App_component_div_tr_td_a_q_e_click_lgbZkJXyLtg = (_, _1, row)=>{
    const selectedItem = _captures[0];
    if (selectedItem.value) selectedItem.value.selected.value = false;
    selectedItem.value = row.value;
    row.value.selected.value = true;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";+DAWwB,QALD;;IAMP,IAAI,aAAa,KAAK,EACpB,aAAa,KAAK,CAAC,QAAQ,CAAC,KAAK,GAAG;IAEtC,aAAa,KAAK,GAAG,IAAI,KAAK;IAC9B,IAAI,KAAK,CAAC,QAAQ,CAAC,KAAK,GAAG\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_div_tr_td_a_q_e_click_lgbZkJXyLtg",
  "entry": null,
  "displayName": "test.tsx_App_component_div_tr_td_a_q_e_click",
  "hash": "lgbZkJXyLtg",
  "canonicalFilename": "test.tsx_App_component_div_tr_td_a_q_e_click_lgbZkJXyLtg",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    475,
    716
  ],
  "paramNames": [
    "_",
    "_",
    "row"
  ],
  "captureNames": [
    "selectedItem"
  ]
}
*/
============================= test.tsx_App_component_div_tr_td_a_q_e_click_1_40fnSAlYI48.js (ENTRY POINT)==

import { _captures } from "@qwik.dev/core";
export const App_component_div_tr_td_a_q_e_click_1_40fnSAlYI48 = (_, _1, row)=>{
    const data = _captures[0];
    const dataValue = untrack(()=>data.value);
    data.value = dataValue.toSpliced(dataValue.findIndex((d)=>d.value.id === row.value.id), 1);
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";iEAwBwB,QAlBD;;IAmBP,MAAM,YAAY,QAAQ,IAAM,KAAK,KAAK;IAC1C,KAAK,KAAK,GAAG,UAAU,SAAS,CAC9B,UAAU,SAAS,CAAC,CAAC,IAAM,EAAE,KAAK,CAAC,EAAE,KAAK,IAAI,KAAK,CAAC,EAAE,GACtD\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_div_tr_td_a_q_e_click_1_40fnSAlYI48",
  "entry": null,
  "displayName": "test.tsx_App_component_div_tr_td_a_q_e_click_1",
  "hash": "40fnSAlYI48",
  "canonicalFilename": "test.tsx_App_component_div_tr_td_a_q_e_click_1_40fnSAlYI48",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    874,
    1123
  ],
  "paramNames": [
    "_",
    "_",
    "row"
  ],
  "captureNames": [
    "data"
  ]
}
*/
== DIAGNOSTICS ==

[]
