crates/swc-optimizer/core/src/snapshots/qwik_core__test__should_extract_single_qrl_2.snap
---
source: src/test.rs
expression: output
---
==INPUT==
import { component$, useStore, useSignal } from "@qwik.dev/core";
const Parent = component$(() => {
  const cart = useStore<Cart>([]);
  const results = useSignal(["foo", "bar"]);

  return (
    <div>
      <button id="first" onClick$={() => (results.value = ["item1", "item2"])}></button>

      {results.value.map((item, key) => (
        <button
          id={"second-" + key}
          onClick$={() => {
            cart.push(item);
          }}
        >
          {item}
        </button>
      ))}
      <ul>
        {cart.map((item) => (
          <li>
            <span>{item}</span>
          </li>
        ))}
      </ul>
    </div>
  );
});

============================= test.js ==
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Parent_component_XXXXXXXXXXXX");
/*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_XXXXXXXXXXXX, "Parent_component_XXXXXXXXXXXX"));

Some('{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";;;cACe"}');
============================= test.tsx_Parent_component_XXXXXXXXXXXX.js (ENTRY POINT)==
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_Parent_component_div_button_q_e_click_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () =>
  import("./test.tsx_Parent_component_div_button_q_e_click_1_XXXXXXXXXXXX");
export const Parent_component_XXXXXXXXXXXX = () => {
  const cart = useStore([]);
  const results = useSignal(["foo", "bar"]);
  const Parent_component_div_button_q_e_click_1_XXXXXXXXXXXX = /*#__PURE__*/ qrl(
    i_XXXXXXXXXXXX,
    "Parent_component_div_button_q_e_click_1_XXXXXXXXXXXX",
    [cart],
  );
  return /*#__PURE__*/ _jsxSorted(
    "div",
    null,
    null,
    [
      /*#__PURE__*/ _jsxSorted(
        "button",
        null,
        {
          id: "first",
          "q-e:click": /*#__PURE__*/ qrl(
            i_XXXXXXXXXXXX,
            "Parent_component_div_button_q_e_click_XXXXXXXXXXXX",
            [results],
          ),
        },
        null,
        3,
        null,
      ),
      results.value.map((item, key) =>
        /*#__PURE__*/ _jsxSorted(
          "button",
          {
            id: "second-" + key,
            "q-e:click": Parent_component_div_button_q_e_click_1_XXXXXXXXXXXX,
            "q:p": item,
          },
          null,
          item,
          0,
          "u6_0",
        ),
      ),
      /*#__PURE__*/ _jsxSorted(
        "ul",
        null,
        null,
        cart.map((item) =>
          /*#__PURE__*/ _jsxSorted(
            "li",
            null,
            null,
            /*#__PURE__*/ _jsxSorted("span", null, null, item, 1, null),
            1,
            "u6_1",
          ),
        ),
        1,
        null,
      ),
    ],
    1,
    "u6_2",
  );
};

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";;;;;;4CAC0B;IACxB,MAAM,OAAO,SAAe,EAAE;IAC9B,MAAM,UAAU,UAAU;QAAC;QAAO;KAAM;;;;IAExC,qBACE,WAAC;sBACC,WAAC;YAAO,IAAG;YAAQ,WAAQ;;;;QAE1B,QAAQ,KAAK,CAAC,GAAG,CAAC,CAAC,MAAM,oBACxB,WAAC;gBACC,IAAI,YAAY;gBAChB,WAAQ;uBAHQ;qBAOf;sBAGL,WAAC,kBACE,KAAK,GAAG,CAAC,CAAC,qBACT,WAAC,gCACC,WAAC,oBAAM;;AAMnB"}',
);
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Parent_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Parent_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    93,
    652
  ]
}
*/
============================= test.tsx_Parent_component_div_button_q_e_click_XXXXXXXXXXXX.js (ENTRY POINT)==
import { _captures } from "@qwik.dev/core";
export const Parent_component_div_button_q_e_click_XXXXXXXXXXXX = () => {
  const results = _captures[0];
  return (results.value = ["item1", "item2"]);
};

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";iEAOmC;;WAAO,QAAQ,KAAK,GAAG;QAAC;QAAS;KAAQ"}',
);
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_div_button_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Parent_component_div_button_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Parent_component_div_button_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "Parent_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    238,
    280
  ],
  "captureNames": [
    "results"
  ]
}
*/
============================= test.tsx_Parent_component_div_button_q_e_click_1_XXXXXXXXXXXX.js (ENTRY POINT)==
import { _captures } from "@qwik.dev/core";
export const Parent_component_div_button_q_e_click_1_XXXXXXXXXXXX = (_, _1, item) => {
  const cart = _captures[0];
  cart.push(item);
};

Some(
  '{"version":3,"sources":["/user/qwik/src/test.tsx"],"names":[],"mappings":";mEAYoB,QAHM;;IAId,KAAK,IAAI,CAAC"}',
);
/*
{
  "origin": "test.tsx",
  "name": "Parent_component_div_button_q_e_click_1_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_Parent_component_div_button_q_e_click_1",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_Parent_component_div_button_q_e_click_1_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": "Parent_component_XXXXXXXXXXXX",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    402,
    450
  ],
  "paramNames": [
    "_",
    "_",
    "item"
  ],
  "captureNames": [
    "cart"
  ]
}
*/
== DIAGNOSTICS ==

[]
